Fixed scroll snapping bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -152,13 +152,10 @@
     padding-bottom: 40px;
     padding-left: 10px;
     padding-right: 10px;
-    /*Here*/
-    /*height: 100vh !important;*/ /* Set the height of the container to fit the viewport */
-    /*scroll-snap-align: start !important;*/
-    /*HERE*/
     height: 100vh;
     scroll-snap-align: start;
-    /*scroll-snap-stop: always;*/
+    /*Applied*/
+    scroll-snap-stop: always;
   }
 }
 
@@ -420,6 +417,8 @@
     padding-top: 20px;
     padding-left: 1rem; /*100px*/
     padding-right: 1rem;
+    /*Applied*/
+    scroll-snap-align: start;
   }
 }
 
@@ -460,11 +459,11 @@
 }
 
 .tab-software-headline {
-  font-family: monospace;
+  /*font-family: monospace;*/
 }
 
 .tab-journalism-headline {
-  font-family: cursive;
+  /*font-family: cursive;*/
 }
 
 /*
